Añadiendo nombre e imagenes a los personajes en el detalle del episodio, además empiezo aplicarle un poco de color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,10 @@
     <color name="deep_blue">#0B1E2D</color>
     <color name="neo_green">#00FF9C</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="light_blue">#42B4CA</color>
+    <color name="green_caca">#BFDE42</color>
+    <color name="deep_blue2">#193840</color>
+
+
 
 </resources>
