--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
     <color name="deep_blue">#0B1E2D</color>
     <color name="neo_green">#00FF9C</color>
     <color name="yellow">#FFEB3B</color>
+
+<!--    colores de logo-->
     <color name="light_blue">#42B4CA</color>
     <color name="green_caca">#BFDE42</color>
     <color name="deep_blue2">#193840</color>
-
-
 
 </resources>
