--- a/app/src/main/res/layout/fragment_episodes.xml
+++ b/app/src/main/res/layout/fragment_episodes.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/backgroundExterno"
     tools:context=".EpisodesFragment"
     android:padding="12dp"
     android:orientation="vertical">
@@ -18,6 +19,7 @@
             android:id="@+id/tgFilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/backgroundButtomGroup"
             app:singleSelection="true"
             app:checkedButton="@+id/btnAll">
 
@@ -25,14 +27,14 @@
                 android:id="@+id/btnAll"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                style="@style/backgroundButtom"
                 android:text="Todos"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSeen"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                style="@style/backgroundButtom"
                 android:text="Vistos"/>
 
         </com.google.android.material.button.MaterialButtonToggleGroup>
@@ -41,6 +43,7 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        style="@style/backgroundIntermedio"
         android:layout_marginBottom="32dp">
 
 
