--- a/app/src/main/res/layout/item_episode.xml
+++ b/app/src/main/res/layout/item_episode.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    style="@style/itemEpisode"
     app:cardCornerRadius="8dp"
     android:elevation="2dp">
 
@@ -15,7 +16,6 @@
     android:padding="12dp">
 
     <View
-        android:id="@+id/vSeen"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginEnd="12dp"
