--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:backgroundTint="@color/yellow">
 
-    <TextView
-        android:id="@+id/tvTotal"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total episodios: 0"
-        android:textSize="18sp"
-        android:padding="8dp"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:gravity="top"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvSeen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Vistos: 0"
-        android:textSize="18sp"
-        android:padding="8dp"/>
 
-    <TextView
-        android:id="@+id/tvPercent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Progreso: 0%"
-        android:textSize="18sp"
-        android:padding="8dp"/>
+        <TextView
+            android:id="@+id/tvTotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/statsFragmentText"
+            tools:text="Total episodios: 0" />
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="0"
-        android:max="100"
-        android:layout_marginTop="12dp"/>
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvSeen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/statsFragmentText"
+            tools:text="Vistos: 0" />
+
+        <TextView
+            android:id="@+id/tvPercent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/statsFragmentText"
+            tools:text="Progreso: 0%" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:max="100"
+            android:progress="0"
+            android:progressTint="@color/neo_green" />
+
+
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
