--- a/app/src/main/res/values-v26/themes.xml
+++ b/app/src/main/res/values-v26/themes.xml
@@ -7,4 +7,14 @@
         <item name="android:layout_marginVertical">2dp</item>
         <item name="android:layout_marginHorizontal">4dp</item>
     </style>
+
+    <style name="aboutDialogButtom">
+        <item name="android:layout_weight">0.5</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/deep_blue</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginHorizontal">30dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
 </resources>
