--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -71,7 +71,8 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/deep_blue</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:padding">8dp</item>
         <item name="android:background">@color/neo_green</item>
     </style>
